--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 }
             },
             "args": [
-                "."
+                "/home/logan/DupTest"
             ],
             "cwd": "${workspaceFolder}"
         },
